Revision history for {{$dist->name}}

{{$NEXT}}

6.007     2016-08-06 14:04:39-04:00 America/New_York
        - restrict [MetaYAML] to metaspec v1.4, [MetaJSON] to v2.0+, as other
          version combinations are not well-supported by the toolchain

6.006     2016-07-04 10:56:36-04:00 America/New_York
        - add some documentation to Dist::Zilla::App::Tester (thanks, Alberto
          Simões!)
        - optimizations to regex munging (thanks, Olivier Mengué!)
        - add x_serialization_backend to META.* files (thanks, Karen
          Etheridge!)
        - metadata plugins are called before metadata defaults are built
          (thanks, Karen Etheridge!)
        - don't use ExtraTests plugin, but if you do, its generated test files
          are a bit faster when unused

6.005     2016-05-23 08:08:15-04:00 America/New_York
        - NextRelease now dies if there's no changelog file found
          (thanks, Karen Etheridge)
        - Module::Runtime replaces Class::Load (thanks Olivier Mengué)

6.004     2016-05-14 09:14:19-04:00 America/New_York (TRIAL RELEASE)
        - stop listing Path::Class as a prereq (thanks, Karen Etheridge)
        - update docs on path types (thanks, Graham Ollis)

6.003     2016-04-24 19:23:46+01:00 Europe/London (TRIAL RELEASE)
        - leading BOM (FEFF) is stripped on UTF-8 content
        - PPI now handles characters, not bytes, fixing non-ASCII
          non-comments in your source

6.002     2016-04-23 17:50:26+01:00 Europe/London (TRIAL RELEASE)
        - tweaks to Dist::Zilla::Path to keep plugins from v5 era working

6.001     2016-04-23 13:21:56+01:00 Europe/London
        [THIS RELEASE MIGHT BREAK YOUR BUILD]
        - Using a Dist::Zilla::Path like a Path::Class object now issues a
          deprecation warning ("this will be removed") once per call site.

6.000     2016-04-23 11:35:28+01:00 Europe/London (TRIAL RELEASE)
        [THIS RELEASE MIGHT BREAK YOUR BUILD]